<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/menu_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person_black_18dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/request_form_24"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/nav_listings"
            android:icon="@drawable/outline_room_black_18dp"
            android:title="@string/menu_listings" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/outline_favorite_black_18dp"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login_24"
                android:title="@string/menu_login" />
        </menu>
    </item>

</menu>
