<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bit271.fsprototype.ui.home.HomeFragment"
        android:label="@string/nav_header_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.bit271.fsprototype.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_requests"
        android:name="com.bit271.fsprototype.ui.requests.RequestsFragment"
        android:label="@string/menu_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/nav_listings"
        android:name="com.bit271.fsprototype.ui.listings.ListingsFragment"
        android:label="@string/menu_listings"
        tools:layout="@layout/fragment_listings" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.bit271.fsprototype.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.bit271.fsprototype.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.bit271.fsprototype.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
</navigation>